@@ -17,6 +17,7 @@
 #undef png_write_chunk_end
 #undef png_create_info_struct
 #undef png_info_init
+#undef png_info_init_3
 #undef png_write_info_before_PLTE
 #undef png_write_info
 #undef png_read_info
