@@ -8,6 +8,8 @@
  * Remove macros that will interfere with the definitions below.
  */
 
+#undef png_info_init
+
 /*
  * WARNING: The contents of this file is automatically generated by the
  * genStubs.tcl script. Any modifications to the function declarations
@@ -1325,6 +1327,7 @@ PngtclStubs pngtclStubs = {
 #else  /* !PNG_INTERNAL !PNG_PROGRESSIVE_READ_SUPPORTED !PNG_iTXt_SUPPORTED */
     png_push_read_iTXt, /* 317 */
 #endif /* !PNG_INTERNAL !PNG_PROGRESSIVE_READ_SUPPORTED !PNG_iTXt_SUPPORTED */
+    png_info_init_3, /* 318 */
 };
 
 /* !END!: Do not edit above this line. */
